[project]
name = "dora-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "groq>=0.31.0",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.5",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.0.1",
]
